Fix bug subscription text does not fit in subscription-info div

--- a/apps/concierge_site/assets/css/_my-subscriptions.scss
+++ b/apps/concierge_site/assets/css/_my-subscriptions.scss
@@ -67,7 +67,7 @@
 }
 
 .subscription-info {
-  display: flex;
+  display: block;
   flex: auto;
   flex-direction: column;
   justify-content: space-around;
